--- a/btcquote.html
+++ b/btcquote.html
@@ -6,5 +6,9 @@
 	<body>
 		<div id="btc-quote"></div>
 		<script type="text/javascript" src="build/btcquote-widget.js"></script>
+		<p>
+		<div id="btc-quote"></div>
+		<script type="text/javascript" src="build/btcquote-widget.min.js"></script>
+		</p>
 	</body>
 </html>
